[package]
name = "pkbuffer_derive"
description = "derive macros for `pkbuffer`"
repository = "https://github.com/frank2/pkbuffer"
version = "0.1.0"
authors = ["frank2@dc949.org"]
edition = "2018"
license = "GPL-3.0"
keywords = ["buffer", "memory", "casting", "bytes"]
readme = "README.md"
exclude = ["*~", "notes.org"]
documentation = "https://docs.rs/pkbuffer_derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pkbuffer_derive"
proc-macro = true

[dependencies]
syn = "1.0.89"
quote = "1.0.17"
proc-macro2 = "1.0.36"
